--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.show-sql=true
 
+#security
+#logging.level.org.springframework.security=DEBUG
+
+
+
 
 
 
